fix: correct vercel.json regex pattern for image caching

--- a/vercel.json
+++ b/vercel.json
@@ -35,7 +35,7 @@
       ]
     },
     {
-      "source": "/(.*)\\.(?:png|jpg|jpeg|svg|webp|gif)",
+      "source": "/(.*\\.(png|jpg|jpeg|svg|webp|gif))",
       "headers": [
         {
           "key": "Cache-Control",
